sort.basic.insertion.AlgInsertionSort.scala.error
Erreur de compilation :
AlgInsertionSort:7: error: '(' expected but identifier found.
    while(ptemp>0){if plusPetit(ptemp+1,ptemp){copie(ptemp,ptemp+1);ptemp-=1}}
                      ^AlgInsertionSort:7: error: illegal start of simple expression
    while(ptemp>0){if plusPetit(ptemp+1,ptemp){copie(ptemp,ptemp+1);ptemp-=1}}
                                                                             ^